--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-        <h1>Coming Soon</h1>
+        <h1>Coming <br> Soon</h1>
         <hr>
         <p>35 days left</p>
     </main>
